home page form bottom spaced added only on tablet - issue

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -344,6 +344,9 @@
 
 
 .front{
+  .slider-block{
+    top: -16px;
+  }
   .slider-container{
     @include breakpoint($tablet){
       height:auto;
